# pMesh

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindpMesh.cmake
include/pMesh/: Common.h  Frame.h  Mesh.h  Mesh.impl  Numeric.h  Point.h  io.h
include/pMesh/3d/: SurfaceMesh.h  TriangleMesh.h  VolumeMesh.h
include/pMesh/core/: Cell.h  Decl.h  Edge.h  ExtraData.h  Face.h  FieldWrapper.h  HalfEdge.h  HalfFace.h  Handle.h  Mesh.h  Mesh.impl  Mesh_impl.h  Null.h  SurfaceMesh.h  SurfaceMesh_impl.h  Trait.h  Vertex.h  VolumeMesh.h  VolumeMesh_impl.h
include/pMesh/core/Surface/: Cell.h  Decl.h  Edge.h  HalfEdge.h  Mesh.h  Mesh_impl.h  Vertex.h
include/pMesh/core/Volume/: Decl.h  Edge.h  Face.h  HalfEdge.h  HalfFace.h  Mesh.h  Vertex.h
include/pMesh/functional/: BoundingSphere.h  BoundingSphere.hpp
include/pMesh/functional/MarchingCubes/: MarchingCubes.h  tables.h
include/pMesh/functional/RBF/: LinearSolverType.h  RBFInterpolation.h  definitions.h  kernels.h
include/pMesh/io/adapter/: DefaultReadAdapter.h  DefaultWriteAdapter.h
include/pMesh/io/adapters/: DefaultAdapter.h  DefaultReadAdapter.h  DefaultWriteAdapter.h  IOAdapter.h  ReadAdapter.h  WriteAdapter.h
include/pMesh/io/reader/: BaseReader.h  EigenMatrixReader.h  OBJReader.h  STLReader.h  VFReader.h  VTKReader.h
include/pMesh/io/readers/: BaseReader.h  MeshReader.h  OBJReader.h  STLReader.h  VFReader.h  VTKReader.h
include/pMesh/io/writer/: BaseWriter.h  EigenMatrixWriter.h  OBJWriter.h  STLWriter.h  VFWriter.h  VTKWriter.h
include/pMesh/io/writers/: BaseWriter.h  (+4 more)
include/pMesh/mesh/: HexahedronMesh.h  HexahedronMesh_impl.h  SurfaceMesh.h  SurfaceMesh_impl.h  TetrahedronMesh.h  TetrahedronMesh_impl.h
include/pMesh/meshes/: HexahedronMesh.h  HexahedronMesh_impl.h  SurfaceMesh.h  SurfaceMesh.impl  SurfaceMesh_impl.h  TetrahedronMesh.h  TriangleMesh.h  VolumeMesh.h
include/pMesh/operator/: CellVerticesOrderRegulator.h  CellVerticesOrderRegulator_impl.h  README.md
include/pMesh/operators/: CellVerticesOrderRegulator.h  CellVerticesOrderRegulator.impl  CellVerticesOrderRegulator_impl.h  CommonOperators.h  CommonOperators.impl  Operator.h  RedundantVerticesEliminater.h  RedundantVerticesEliminater.impl  RedundantVerticesEliminater_impl.h  TriangleMeshOperators.h
src/: io.cpp  placeholder.cpp
src/3d/: TriangleMesh.cpp
src/funtional/MarchingCubes/: MarchingCubes.cpp
src/funtional/RBF/: RBFInterpolation.cpp  kernels.cpp
src/io/reader/: EigenMatrixReader.cpp  OBJReader.cpp  STLReader.cpp  VFReader.cpp  VTKReader.cpp
src/io/readers/: OBJReader.cpp  STLReader.cpp  VFReader.cpp  VTKReader.cpp
src/io/writer/: EigenMatrixWriter.cpp  OBJWriter.cpp  STLWriter.cpp  VFWriter.cpp  VTKWriter.cpp
src/io/writers/: OBJWriter.cpp  STLWriter.cpp  VFWriter.cpp  VTKWriter.cpp
src/operators/: CommonOperators.cpp  TriangleMeshOperators.cpp
tests/bounding_sphere/: CMakeLists.txt  main.cpp
tests/example1/: CMakeLists.txt  main.cpp
tests/marching_cubes/: CMakeLists.txt  main.cpp
tests/rbf/: CMakeLists.txt  main.cpp
tests/simplify_edges/: CMakeLists.txt  main.cpp  preprocess.h  utils.h
tests/tri_tri_inter/: CMakeLists.txt  main.cpp  tri_tri_intersection.h
(+6 files in other folders)
